# camerahub-material

./: manage.py  pyproject.toml
camerahub/: asgi.py  settings.py  urls.py  wsgi.py
schema/: apps.py  models.py  urls.py  views.py
schema/migrations/: 0001_initial.py  0002_alter_manufacturer_options_and_more.py  0003_paperstock.py  0004_archive_battery_bulkfilm_camera_condition_developer_and_more.py
schema/templates/schema/: index.html  menu.html
templates/material/frontend/: base_module.html  base_site.html
